--- a/permissions/src/main/AndroidManifest.xml
+++ b/permissions/src/main/AndroidManifest.xml
@@ -2,4 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hmju.permissions">
 
+    <application android:allowBackup="false">
+
+        <activity
+            android:name=".PermissionsActivity"
+            android:launchMode="singleTask" />
+
+    </application>
 </manifest>
