feat: dp, sp 확장 클래스 추가

--- a/permissions/src/main/AndroidManifest.xml
+++ b/permissions/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application android:allowBackup="false">
 
         <activity
-            android:name=".PermissionsActivity"
+            android:name=".ui.PermissionsActivity"
             android:launchMode="singleTask" />
 
     </application>
