fix: 권한 로직 수행중 깜박거리는 이슈 처리

--- a/permissions/src/main/AndroidManifest.xml
+++ b/permissions/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
 
         <activity
             android:name=".ui.PermissionsActivity"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:theme="@style/TransparentTheme" />
 
     </application>
 </manifest>
