--- a/permissions/build.gradle
+++ b/permissions/build.gradle
@@ -19,9 +19,11 @@ android {
     }
 
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        release {
+            minifyEnabled true
         }
     }
     compileOptions {
