fix: 권한 페이지 호출시 까만 화면 보이는 이슈 처리

--- a/permissions/src/main/AndroidManifest.xml
+++ b/permissions/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
 
         <activity
             android:name=".ui.PermissionsActivity"
-            android:launchMode="singleTask"
-            android:theme="@style/TransparentTheme" />
+            android:launchMode="singleTask" />
 
     </application>
 </manifest>
