--- a/permissions/src/main/AndroidManifest.xml
+++ b/permissions/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
         <activity
             android:name=".ui.PermissionsActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|fontScale"
             android:launchMode="singleTask" />
 
     </application>
