fix: 권한 페이지 호출시 까만 화면 보이는 이슈 처리 -... 제발 되라..

--- a/permissions/src/main/AndroidManifest.xml
+++ b/permissions/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
 
         <activity
             android:name=".ui.PermissionsActivity"
+            android:theme="@style/Theme.Transparent.SimplePermissions"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|fontScale"
+            android:screenOrientation="unspecified"
             android:launchMode="singleTask" />
 
     </application>
