--- a/permissions/build.gradle
+++ b/permissions/build.gradle
@@ -10,13 +10,13 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 3
-        versionName "0.0.3"
+        versionCode 6
+        versionName "0.0.6"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
         }
     }
     compileOptions {
