fix: build.gradle 수정

--- a/permissions/build.gradle
+++ b/permissions/build.gradle
@@ -12,11 +12,16 @@ android {
         targetSdkVersion 30
         versionCode 6
         versionName "0.0.6"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
+        }
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
