--- a/permissions/src/main/AndroidManifest.xml
+++ b/permissions/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hmju.permissions">
 
-    <application android:allowBackup="false">
+    <application>
 
         <activity
             android:name=".ui.PermissionsActivity"
