--- a/permissions/build.gradle
+++ b/permissions/build.gradle
@@ -33,7 +33,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation("com.github.sieunju:widget:1.0.3-beta01")
+    implementation("com.github.sieunju:widget:1.0.3-beta01") {
+        exclude group: "com.google.android.material"
+    }
 }
 
 afterEvaluate {
@@ -43,7 +45,7 @@ afterEvaluate {
                 from components.release
                 groupId = 'com.github.sieunju'
                 artifactId = 'permissions'
-                version = '1.0.1-beta01'
+                version = '1.0.1-beta02'
             }
         }
     }
