--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
 dependencies {
     implementation project(path: ':permissions')
-
+    // implementation("com.github.sieunju:SimplePermissions:1.0.1-beta01")
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
