--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    repositories {
-        google()
-        jcenter()
-    }
+    apply from: 'version.gradle'
+    addRepos(repositories)
     dependencies {
-        classpath "com.android.tools.build:gradle:7.1.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
+        classpath deps.androidPlugin
+        classpath deps.kotlinPlugin
         classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
     }
 }
 
 allprojects {
-    repositories {
-        google()
-        jcenter()
-        maven { url 'https://jitpack.io' }
-    }
+    addRepos(repositories)
 }
 
 task clean(type: Delete) {
