--- a/version.gradle
+++ b/version.gradle
@@ -12,7 +12,7 @@ ext.buildVersions = buildVersions
 
 def deps = [:]
 
-deps.release = "1.0.1-beta03"
+deps.release = "1.1.0"
 
 versions.kotlin = "1.5.0"
 versions.androidPlugin = "7.1.3"
